@@ -7,6 +7,7 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 /**
  * 扩展点执行器
@@ -138,7 +139,7 @@ public class ExtensionExecutor {
                             (ExtensionPointI) bean
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
