@@ -4,6 +4,7 @@ import com.example.user.domain.extension.BizScenario;
 import com.example.user.domain.extension.Extension;
 import com.example.user.domain.extension.NotificationChannelExtPt;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,20 +17,20 @@ public class EnterpriseNotificationChannelExt implements NotificationChannelExtP
     @Override
     public List<NotificationChannelExtPt.ChannelType> getChannels(NotificationChannelExtPt.NotificationType notificationType,
                                                                   Long userId, BizScenario bizScenario) {
-        return switch (notificationType) {
-            // 营销消息：邮件
-            case MARKETING, PROMOTION -> List.of(NotificationChannelExtPt.ChannelType.EMAIL);
-
-            // 交易提醒：短信+邮件
-            case TRANSACTION -> List.of(NotificationChannelExtPt.ChannelType.SMS,
-                    NotificationChannelExtPt.ChannelType.EMAIL);
-
-            // 安全告警：电话+短信（最高优先级）
-            case SECURITY -> List.of(NotificationChannelExtPt.ChannelType.PHONE,
-                    NotificationChannelExtPt.ChannelType.SMS);
-
-            // 系统公告：邮件
-            case SYSTEM -> List.of(NotificationChannelExtPt.ChannelType.EMAIL);
-        };
+        switch (notificationType) {
+            case MARKETING:
+            case PROMOTION:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.EMAIL);
+            case TRANSACTION:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.SMS,
+                        NotificationChannelExtPt.ChannelType.EMAIL);
+            case SECURITY:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.PHONE,
+                        NotificationChannelExtPt.ChannelType.SMS);
+            case SYSTEM:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.EMAIL);
+            default:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.EMAIL);
+        }
     }
 }
