@@ -4,6 +4,7 @@ import com.example.user.domain.extension.BizScenario;
 import com.example.user.domain.extension.Extension;
 import com.example.user.domain.extension.NotificationChannelExtPt;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,22 +17,22 @@ public class VipNotificationChannelExt implements NotificationChannelExtPt {
     @Override
     public List<NotificationChannelExtPt.ChannelType> getChannels(NotificationChannelExtPt.NotificationType notificationType,
                                                                   Long userId, BizScenario bizScenario) {
-        return switch (notificationType) {
-            // 营销消息：邮件
-            case MARKETING, PROMOTION -> List.of(NotificationChannelExtPt.ChannelType.EMAIL,
-                    NotificationChannelExtPt.ChannelType.IN_APP);
-
-            // 交易提醒：短信+邮件
-            case TRANSACTION -> List.of(NotificationChannelExtPt.ChannelType.SMS,
-                    NotificationChannelExtPt.ChannelType.EMAIL);
-
-            // 安全告警：短信+邮件
-            case SECURITY -> List.of(NotificationChannelExtPt.ChannelType.SMS,
-                    NotificationChannelExtPt.ChannelType.EMAIL);
-
-            // 系统公告：站内信+推送
-            case SYSTEM -> List.of(NotificationChannelExtPt.ChannelType.IN_APP,
-                    NotificationChannelExtPt.ChannelType.PUSH);
-        };
+        switch (notificationType) {
+            case MARKETING:
+            case PROMOTION:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.EMAIL,
+                        NotificationChannelExtPt.ChannelType.IN_APP);
+            case TRANSACTION:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.SMS,
+                        NotificationChannelExtPt.ChannelType.EMAIL);
+            case SECURITY:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.SMS,
+                        NotificationChannelExtPt.ChannelType.EMAIL);
+            case SYSTEM:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.IN_APP,
+                        NotificationChannelExtPt.ChannelType.PUSH);
+            default:
+                return Arrays.asList(NotificationChannelExtPt.ChannelType.IN_APP);
+        }
     }
 }
